<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">如梭</string>

    <string name="action_test">（测试预留）</string>
    <string name="action_refresh">刷新</string>
    <string name="action_delete_all">全删</string>
    <string name="motto">君子终日乾乾,夕惕若厉,无咎。</string>
    <string name="motto_top">According to research published in the New England Journal of Medicine,10 minutes of ogling is equivalent to a 30-minute gym workout.</string>
    <string name="item_title">学习打卡</string>
    <string name="item_content_start">本次学习</string>
    <string name="item_content">h，剩余</string>
    <string name="item_content_end">h。</string>
    <string name="item_content_null"> </string>
    <string name="motto_empty">首先，鼓励自己。</string>

    <string name="card_study_plan">编程学习计划</string>
    <string name="card_calculator">复利计息计算器</string>
    <string name="card_bubble">气泡</string>
    <string name="card_TF_lite">人工智障识图</string>
    <string name="card_nothing">待定...</string>
    <string name="card_name_five">本地广播测试</string>

    <string name="pending">待定..</string>

    <string name="text_explanation">实际天数计算，考虑了至少有一年闰年多一天\n
本利和=10000*(1+0.00012)^(365*5+1)=12449.64元\n
收益=12449.64-10000=2449.64元。\n
复利的计算是考虑前一期利息再生利息的问题，要计入本金重复计息，即“利生利”“利滚利”。\n
复利计算的特点是：把上期末的本利和作为下一期的本金，在计算时每一期本金的数额是不同的。复利的计算公式是：F=P（1+i）^n\n
F=A((1+i)^n-1)/i\n
P=F/(1+i)^n\n
P=A((1+i)^n-1)/(i(1+i)^n)\n
A=Fi/((1+i)^n-1)\n
A=P(i(1+i)^n)/((1+i)^n-1)\n
F：终值（Future Value），或叫未来值，即期末本利和的价值。\n
P：现值（Present Value），或叫期初金额。\n
A ：年金（Annuity），或叫等额值。\n
i：利率或折现率\n
N：计息期数\n
复利计算有间断复利和连续复利之分。按期（如按年、半年、季、月或日等）计算复利的方法为间断复利；按瞬时计算复利的方法为连续复利。在实际应用中一般采用间断复利的计算方法。\n
\n
日计息其实就是复利概念。
与银行做对比，银行的存款除了活期外其它均按照年利息计算，即一年存满后得到的利息，每日你的本金不变。\n
例：你存1000元，年利息是3%，到期后你的利息是30元，但要一年存满。\n

保险的日计息是把利息放到每日结算，这样你的本金会逐渐增加，比如：本金1000元，日利息为A，你的第二天本金就变成了1000+1000*A，第三天的本金就变成了1000+1000*A+（1000+1000*A）*A，以此类推。利用复利计算器可以算出你的本金在365天后的实际利息。
我们通常在保险公司听到的年化利率实际上就是把日利息按照365天进行了推算（需要复利进行计算，绝对不是把日利息*365）。\n
复利计算公式是计算前一期利息再生利息的问题，计入本金重复计息，即“利生利”“利滚利”。它的计算方法主要分为2种：一种是一次支付复利计算；另一种是等额多次支付复利计算。\n
它的的特点是：把上期末的本利和作为下一期的 本金，在计算时每一期本金的数额是不同的。主要应用于计算多次等额投资的本利终值和计算多次等额回款值。\n
F=P*(1+i)^n\n
F=A((1+i)^n-1)/i\n
P=F/(1+i)^n\n
P=A((1+i)^n-1)/(i(1+i)^n)\n
A=Fi/((1+i)^n-1)\n
A=P(i(1+i)^n)/((1+i)^n-1)\n
F：终值（Future Value），或叫未来值，即期末本利和的价值。\n
P：现值（Present Value），或叫期初金额。\n
A ：年金（Annuity），或叫等额值。\n
i：利率或折现率\n
N：计息期数\n
复利计算的特点是：把上期末的本利和作为下一期的本金，在计算时每一期本金的数额是不同的。复利的本息计算公式是：F=P（1+i）^n\n
复利计算有间断复利和连续复利之分。按期（如按年、半年、季、月或日等）计算复利的方法为间断复利；按瞬时计算复利的方法为连续复利。在实际应用中一般采用间断复利的计算方法。\n
复利计算公式复利现值\n
复利现值是指在计算复利的情况下，要达到未来某一特定的资金金额，必须投入的本金。所谓复利也称利上加利，是指一笔存款或者投资获得回报之后，再连本带利进行新一轮投资的方法。\n
复利计算公式复利终值\n
复利终值是指本金在约定的期限内获得利息后，将利息加入本金再计利息，逐期滚算到约定期末的本金之和。\n
复利计算公式例题\n
例如：本金为50000元，利率或者投资回报率为3%，投资年限为30年，那么，30年后所获得的本金+利息收入，按复利计算公式来计算就是：50000×（1+3%）^30\n
由于，通胀率和利率密切关联，就像是一个硬币的正反两面，所以，复利终值的计算公式也可以用以计算某一特定资金在不同年份的实际价值。只需将公式中的利率换成通胀率即可。\n
例如：30年之后要筹措到300万元的养老金，假定平均的年回报率是3%，那么，必须投入的本金是3000000×1/（1+3%）^30\n
每年都结算一次利息（以单利率方式结算），然后把本金和利息和起来作为下一年的本金。下一年结算利息时就用这个数字作为本金。复利率比单利率得到的利息要多。\n
\n
</string>
    <string name="relevant_information">相关信息</string>
    <string name="menu_test_2">（测试预留2）</string>
    <string name="menu_test_3">（测试预留3）</string>

    <string name="tv_hint_loan">借款金额 / 元</string>
    <string name="tv_hint_interest">年化利率 / %</string>
    <string name="tv_hint_start_end">起止时间</string>
    <string name="et_hint_loan">请输入借款金额</string>
    <string name="et_hint_interest">请输入利率</string>
    <string name="et_start_time">借款日</string>
    <string name="et_end_time">还款日</string>
    <string name="btn_calculate">立即计算</string>
    <string name="btn_generating_bill">生成清单</string>
    <string name="btn_goon">计算</string>
    <string name="btn_refresh">清空</string>

    <string name="tflite_sign">XXX</string>
</resources>
