<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.sheenhill.rusuo.v2.db.Plan" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_s"
        android:layout_marginBottom="@dimen/margin_m"
        android:elevation="@dimen/margin_m"
        app:cardCornerRadius="@dimen/margin_m">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_s"
                android:text="@string/item_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{data.time}"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"

                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_s"
                android:text="@string/item_content_start"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/item_study_time"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{data.studyTime+``}"
                android:textSize="@dimen/text_item_card"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@string/item_content"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/item_study_time"
                app:layout_constraintStart_toEndOf="@+id/item_study_time"
                app:layout_constraintTop_toTopOf="@+id/item_study_time" />

            <TextView
                android:id="@+id/item_residual_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:text="@{data.spareTime+``}"
                android:textSize="@dimen/text_item_card"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:text="@string/item_content_end"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/item_residual_time"
                app:layout_constraintStart_toEndOf="@+id/item_residual_time"
                app:layout_constraintTop_toTopOf="@+id/item_residual_time" />

            <TextView
                android:id="@+id/item_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_s"
                android:layout_marginBottom="@dimen/margin_s"
                android:text="@string/motto"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>